<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="home_greeting">님 안녕하세요!\n오늘도 함께 달릴 준비 되었나요?</string>
    <string name="home_location_unknown">광진구 광장동</string>
    <string name="home_temperature_unknown">27°C</string>
    <string name="home_search_hint">원하는 러닝파티를 찾아보세요!</string>

    <string name="list_item_title_unknown">어린이 대공원 같이 뛰실 분</string>
    <string name="list_item_location_unknown">서울시 광진구 능동로 216</string>
    <string name="list_item_time_unknown">09/30 (금) PM 7:00 예정</string>
    <string name="list_item_participating">3/4 참여 중</string>

    <string name="expected">예정</string>
    <string name="participating">참여 중</string>
    <string name="get_involved">참여하기</string>

    <string name="party_detail">파티 상세</string>
    <string name="home">홈</string>
    <string name="share">공유</string>
    <string name="party_title_unknown">광란의 러닝 파티원 구함</string>
    <string name="party_description_unknown">경의선 책거리에서 4km 정도 가볍게 러닝하실 분 모집합니다. 가좌역에서 같이 출발해요!</string>
    <string name="party_location_unknown">서울특별시 마포구 양화로 160 홍대입구역</string>
    <string name="party_time_unknown">09/30 (금) 오후 4:00 예정</string>
    <string name="difficulty">난이도</string>
    <string name="difficulty_newbie">초심자</string>
    <string name="pace">페이스</string>
    <string name="pace_unknown">7~9분</string>
    <string name="time_required">소요시간</string>
    <string name="time_required_unknown">01:00</string>

    <string name="party_owner">러닝 파티 개설자</string>
    <string name="member_name_unknown">치타</string>
    <string name="member_description_blank">한줄 소개란이 비어있는 유저입니다.</string>
    <string name="party_member">참여 중인 파티원</string>
    <string name="join_party">파티 참여하기</string>
</resources>