<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_list_item"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_title_unknown"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        android:fontFamily="@font/pretendard_variable"
        android:textColor="#0a0b0f"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <ImageView
        android:id="@+id/iv_location"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:src="@drawable/ic_location_grey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="45dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_location_unknown"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        android:textColor="#858bad"
        android:textSize="13sp"
        android:fontFamily="@font/pretendard_variable"
        android:textStyle="bold"
        android:layout_marginTop="45dp"
        android:layout_marginStart="35dp"/>

    <ImageView
        android:id="@+id/iv_clock"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:src="@drawable/ic_clock_grey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="65dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/tv_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_time_unknown"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        android:textColor="#858bad"
        android:textSize="13sp"
        android:fontFamily="@font/pretendard_variable"
        android:textStyle="bold"
        android:layout_marginTop="65dp"
        android:layout_marginStart="35dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_profile1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="#f0f0f5"
        app:civ_border_color="#ffffff"
        app:civ_border_width="1.5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="1"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_profile2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="#f0f0f5"
        app:civ_border_color="#ffffff"
        app:civ_border_width="1.5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="1"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="36dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_profile3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="#f0f0f5"
        app:civ_border_color="#ffffff"
        app:civ_border_width="1.5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="1"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="56dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_profile4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/sample_person"
        app:civ_border_color="#ffffff"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="1"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="76dp"/>

    <TextView
        android:id="@+id/tv_participating"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:text="@string/list_item_participating"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="#858bad"
        android:fontFamily="@font/pretendard_variable"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="1"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="111dp"/>


    <TextView
        android:id="@+id/tv_share"
        android:layout_width="68dp"
        android:layout_height="34dp"
        android:gravity="center"
        android:clickable="true"
        android:background="@drawable/bg_list_item_btn"
        android:text="@string/get_involved"
        android:textColor="#858bad"
        android:fontFamily="@font/pretendard_variable"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="1"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"/>

    <ImageView
        android:id="@+id/iv_more"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:clickable="true"
        android:background="@drawable/ic_more_grey"
        android:textColor="#858bad"
        android:fontFamily="@font/pretendard_variable"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>