<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/appbar_theme"
        tools:context=".collapsingtoolbarlayout.CollapsingToolbarActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/abl_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffffff"
                android:background="#ffffff"
                app:contentScrim="?attr/colorPrimary"
                app:titleEnabled="false"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/tb_fake_area"
                    android:background="#ffffff"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:contentInsetStart="0dp"
                    app:layout_collapseMode="pin"
                    app:theme="@style/ThemeOverlay.AppCompat.Light"
                    app:titleTextColor="@color/cardview_dark_background"
                    app:subtitleTextColor="@color/design_default_color_on_primary"
                    app:title=""/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="0dp"
                        app:layout_collapseMode="parallax"
                        app:layout_collapseParallaxMultiplier="0.8">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/civ_background"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="0dp"
                            android:src="@drawable/bg_profile_unknown"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintVertical_bias="0"
                            app:layout_constraintHorizontal_bias="0"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="20dp"/>

                        <ImageView
                            android:id="@+id/iv_thunder_icon"
                            android:layout_width="20dp"
                            android:layout_height="36dp"
                            android:background="#00000000"
                            android:src="@drawable/ic_profile_unknown"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintVertical_bias="0"
                            app:layout_constraintHorizontal_bias="0"
                            android:layout_marginTop="27dp"
                            android:layout_marginStart="35dp"/>

                        <LinearLayout
                            android:id="@+id/ll_weather"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            android:textColor="#3d425c"
                            android:fontFamily="@font/pretendard_variable"
                            android:gravity="center_vertical"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintVertical_bias="0"
                            app:layout_constraintHorizontal_bias="0"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="90dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_location"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/home_location_unknown"
                                android:textSize="13sp"
                                android:textStyle="bold"
                                android:textColor="#3d425c"
                                android:fontFamily="@font/pretendard_variable" />

                            <TextView
                                android:id="@+id/tv_temperature"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/home_temperature_unknown"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:textColor="#3d425c"
                                android:fontFamily="@font/pretendard_variable"
                                android:layout_marginTop="6dp" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_welcome_title"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:text="@string/home_greeting"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:gravity="center_vertical"
                            android:fontFamily="@font/pretendard_variable"
                            android:textColor="#0a0b0f"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintVertical_bias="0"
                            app:layout_constraintHorizontal_bias="0"
                            android:layout_marginTop="90dp"
                            android:layout_marginStart="20dp"/>

                        <ImageView
                            android:id="@+id/iv_weather_icon"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/ic_weather_cloud"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintVertical_bias="0"
                            app:layout_constraintHorizontal_bias="1"
                            android:layout_marginTop="72dp"
                            android:layout_marginEnd="20dp"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/tb_main"
                        android:layout_width="match_parent"
                        android:background="#ffffff"
                        android:layout_height="100dp"
                        app:contentInsetStart="0dp"
                        app:layout_collapseMode="pin"
                        app:theme="@style/ThemeOverlay.AppCompat.Light"
                        app:titleTextColor="@color/cardview_dark_background"
                        app:subtitleTextColor="@color/design_default_color_on_primary"
                        app:title="">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="100dp">

                            <FrameLayout
                                android:id="@+id/frameLayout"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="20dp"
                                android:background="@drawable/bg_search_area"
                                app:layout_constraintVertical_bias="0"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <EditText
                                android:id="@+id/et_search"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="20dp"
                                android:paddingStart="20dp"
                                android:paddingEnd="20dp"
                                android:background="@android:color/transparent"
                                android:imeOptions="actionSearch"
                                android:inputType="text"
                                android:textColorHint="#a3a8c2"
                                android:fontFamily="@font/pretendard_variable"
                                android:textStyle="bold"
                                android:hint="@string/home_search_hint"
                                android:textSize="13sp"
                                app:layout_constraintVertical_bias="0"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <com.google.android.material.tabs.TabLayout
                                android:id="@+id/tl_main"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:tabIndicatorColor="#ffc018"
                                app:tabIndicatorHeight="4dp"
                                app:tabSelectedTextColor="#0a0b0f"
                                app:tabTextAppearance="@style/tab_text"
                                android:layout_marginBottom="1dp"
                                android:layout_marginStart="50dp"
                                android:layout_marginEnd="50dp"
                                app:tabPaddingStart="10dp"
                                app:tabPaddingEnd="10dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="1"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="#E0E2Eb"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="1"/>

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.appcompat.widget.Toolbar>

                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>